@@ -1,11 +1,11 @@
 {
-  "timestamp" : "2022-05-06T01:50:10Z",
-  "count" : 0,
-  "count_minmax" : [ 0, 0 ],
+  "timestamp" : "2022-05-07T01:47:08Z",
+  "count" : 12,
+  "count_minmax" : [ 0, 12 ],
   "count_prev_day_inc" : 1,
   "count_prev_day_dec" : 0,
-  "uniques" : 0,
-  "uniques_minmax" : [ 0, 0 ],
+  "uniques" : 7,
+  "uniques_minmax" : [ 0, 7 ],
   "uniques_prev_day_inc" : 1,
   "uniques_prev_day_dec" : 0
 }
