@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-05-06T01:50:10Z",
+  "timestamp" : "2022-05-07T01:47:08Z",
   "count_outdated" : 443,
   "uniques_outdated" : 244,
-  "count" : 450,
-  "uniques" : 251,
+  "count" : 462,
+  "uniques" : 258,
   "clones" : [
     {
       "timestamp": "2022-04-23T00:00:00Z",
@@ -46,6 +46,13 @@
       "count_minmax": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2022-05-06T00:00:00Z",
+      "count": 12,
+      "count_minmax": [ 0, 12 ],
+      "uniques": 7,
+      "uniques_minmax": [ 0, 7 ]
     }
   ]
 }
