@@ -1,6 +1,6 @@
 {
-  "count": 7,
-  "uniques": 3,
+  "count": 19,
+  "uniques": 9,
   "clones": [
     {
       "timestamp": "2022-04-23T00:00:00Z",
@@ -31,6 +31,11 @@
       "timestamp": "2022-05-05T00:00:00Z",
       "count": 1,
       "uniques": 1
+    },
+    {
+      "timestamp": "2022-05-06T00:00:00Z",
+      "count": 12,
+      "uniques": 7
     }
   ]
 }
